--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>CURSO GIT</h1>
+        <h2>Agregando lineas para prueba de pull request</h2>
     </body>
 </html>
