--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>CURSO GIT</h1>
         <h2>Agregando lineas para prueba de pull request</h2>
+        <p>Ezequiel Hernandez Aguirre</p>
     </body>
 </html>
